<resources>
    <string name="app_name">Desafio03</string>
    <string name="title_activity_login">Login</string>

    <string name="bem_vindo">Welcome to the Marvel HQs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="new_account">Create account</string>
    <string name="remember">Remember</string>
    <string name="register">Register</string>
    <string name="save">SAVE</string>
    <string name="nome">Nome</string>
    <string name="marvel">MARVEL</string>
    <string name="published">Published:</string>
    <string name="price">Price: $</string>
    <string name="pages">Pages</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>